--- a/personalpage.html
+++ b/personalpage.html
@@ -1,1 +1,75 @@
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>
+      Yang's Records
+    </title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+  </head>
 
+  <body>
+
+    <div id="container">
+      <div id="header">
+        <h1>EP1000 Digital Fabrication & Prototyping</h1>
+        <h4>About Me</h4>
+      </div>
+      <div id="content">
+
+        <div id="nav">
+            <ul class="nav">
+              <li><a href="index.html" href="">Home</a></li>
+              <li><a href="project.html">Project</a></li>
+              <li><a href="ppage.html">About Me</a></li>
+              <li><a href="expect.html">Why EP1000</a></li>
+            </ul>
+        </div>
+
+        <div id="main">
+          <br>
+          <h2 style= "text-align: center;">All about this face's owner</h2>
+          <br>
+          <br>
+          <img src="Images/SNAIL.jpg">
+          <br>
+
+          <h2 style="text-align: center;">Full Name: Ang Yue Yang</h2>
+          <br>
+
+          <h3 style="text-align: center;"><a href= mailto: Email: AYANG75.20@ichat.sp.edu.sg>Email: AYANG75.20@ichat.sp.edu.sg (click to email)</a></h3>
+
+          <p style="text-align: center;">
+          Address: Seng Kang Town, Singapore City
+          <br>
+          Course of Study: Diploma in Aeronautical Engineering (DARE)
+          <br>
+          Likes: .....
+          <br>
+          Dislikes: .....
+          <br>
+          Hobbies: .....
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          No, i am not putting actual personal information onto the website i made for this EP1000
+          </p>
+
+        </div>
+      </div>
+
+    </div>
+  </body>
+
+  <footer>
+    <div id="footer">
+      | Copyright &copy; Ang Yue Yang |
+    </div>
+  <footer>
+</html>
+Footer
+© 2022 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
