--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul class="nav">
               <li><a href="index.html" href="">Home</a></li>
               <li><a href="project.html">Project</a></li>
-              <li><a href="ppage.html">About Me</a></li>
+              <li><a href="personalpage.html">About Me</a></li>
               <li><a href="expect.html">Why EP1000</a></li>
             </ul>
         </div>
