--- a/expect.html
+++ b/expect.html
@@ -40,7 +40,16 @@
             <p>
               This module provides me with the materials and knowledge to fabricate a product of my own choosing.
               <br>
-              I decided on making a variable brightness and night light intensity reading lamp.
+              I decided on making a reading light with the following features:
+<ul>
+<li>
+variable red light intensity (knob or slider) 
+variable white light intensity (knob or slider) 
+3 swivel joints, 2 rotary joints
+main power button
+illuminated buttons (very soft lighting) (for night use)
+</li>
+</ul>
             </p>
 
             <br>
