--- a/expect.html
+++ b/expect.html
@@ -42,13 +42,11 @@
               <br>
               I decided on making a reading light with the following features:
 <ul>
-<li>
-variable red light intensity (knob or slider) 
-variable white light intensity (knob or slider) 
-3 swivel joints, 2 rotary joints
-main power button
-illuminated buttons (very soft lighting) (for night use)
-</li>
+<li>variable red light intensity (knob or slider) </li>
+<li>variable white light intensity (knob or slider) </li>
+<li>3 swivel joints, 2 rotary joints </li>
+<li>main power button </li>
+<li>illuminated buttons (very soft lighting) (for night use)</li>
 </ul>
             </p>
 
