--- a/expect.html
+++ b/expect.html
@@ -41,7 +41,8 @@
               This module provides me with the materials and knowledge to fabricate a product of my own choosing.
               <br>
               I decided on making a reading light with the following features:
-<ul>
+<ul style=list-style-type: '👉';
+  padding-inline-start: 1ch;>
 <li>variable red light intensity (knob or slider) </li>
 <li>variable white light intensity (knob or slider) </li>
 <li>3 swivel joints, 2 rotary joints </li>
