--- a/expect.html
+++ b/expect.html
@@ -1,4 +1,4 @@
-<html lang="en" dir="ltr">
+html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>
@@ -18,7 +18,7 @@
 
         <div id="nav">
             <ul class="nav">
-              <li><a href="index.html" href="">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="project.html">Project</a></li>
               <li><a href="personalpage.html">About Me</a></li>
               <li><a href="expect.html">Why EP1000</a></li>
@@ -41,14 +41,14 @@
               This module provides me with the materials and knowledge to fabricate a product of my own choosing.
               <br>
               I decided on making a reading light with the following features:
-<ul style:list-style-type='👉';
-  padding-inline-start: 1ch;>
-<li>variable red light intensity (knob or slider) </li>
-<li>variable white light intensity (knob or slider) </li>
-<li>3 swivel joints, 2 rotary joints </li>
-<li>main power button </li>
-<li>illuminated buttons (very soft lighting) (for night use)</li>
-</ul>
+              <dl>
+                <dd>variable red light intensity (knob or slider) </dd>
+                <dd>variable white light intensity (knob or slider) </dd>
+                <dd>3 swivel joints, 2 rotary joints </dd>
+                <dd>main power button </dd>
+                <dd>illuminated buttons for ease of use at night (very soft lighting)</dd>
+                <dd>multiple memory settings (2-4)</dd>
+              </dl>
             </p>
 
             <br>
@@ -58,7 +58,7 @@
     </div>
   </body>
 
-  <footer>
+  <footer dir="rtl">
     <div id="footer">
       | Copyright &copy; Ang Yue Yang |
     </div>
