--- a/personalpage.html
+++ b/personalpage.html
@@ -18,7 +18,7 @@
 
         <div id="nav">
             <ul class="nav">
-              <li><a href="index.html" href="">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="project.html">Project</a></li>
               <li><a href="personalpage.html">About Me</a></li>
               <li><a href="expect.html">Why EP1000</a></li>
@@ -62,14 +62,9 @@
     </div>
   </body>
 
-  <footer>
+  <footer dir="rtl">
     <div id="footer">
       | Copyright &copy; Ang Yue Yang |
     </div>
   <footer>
 </html>
-Footer
-© 2022 GitHub, Inc.
-Footer navigation
-Terms
-Privacy
