--- a/project.html
+++ b/project.html
@@ -11,6 +11,7 @@
 
     <div id="container">
       <div id="header">
+        <a id="top"></a>
         <h1>EP1000 Digital Fabrication & Prototyping</h1>
         <h4>Project Page</h4>
       </div>
@@ -18,32 +19,49 @@
 
         <div id="nav">
             <ul class="nav">
-              <li><a href="index.html" href="">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="project.html">Project</a></li>
               <li><a href="personalpage.html">About Me</a></li>
               <li><a href="expect.html">Why EP1000</a></li>
             </ul>
         </div>
 
+        <div id="navproject">
+            <ul class="navproject">
+              <li><a href="#top">Back to top</a></li>
+              <li><a href="#ideation">Ideation</a></li>
+              <li><a href="#MarketR">Market Research</a></li>
+              <li><a href="#ideation">Ideation</a></li>
+              <li><a href="#ideation">Ideation</a></li>
+            </ul>
+        </div>
+
+
+
         <div id="main">
           <h2>Variable Colour Reading Lamp</h2>
             <br>
+            <hr>
+            <h3>Part 1- Ideation</h3>
             <br>
-            <h3>Why reading lamp?</h3>
+            <a id="ideation"></a>
+            <h4>Why reading lamp?</h4>
             <p>
-              I have wanted a reading lamp that has a variable night light for reading in the dark since quite a while by now.
+              I have wanted a reading lamp that has a variable night light for reading in the dark since quite a while.
+              <br>
+              The reason being that i will revert to a noctournal sleep cycle if left alone nowadays. To compensate for that, might as well make a reading light perfect for long term use
             </p>
             <br>
             <br>
-            <h3>Why make a lamp instead of buying one?</h3>
+            <h4>Why make a lamp instead of buying one?</h4>
             <p>
               There is no light available on the market that has this function combination of features that i want.
-              The closest examples are lamps that have a night light function but no variable night light,
+              The closest examples are lamps that have a night light function but no night light with fine tuning and memory settings,
               which is exactly what i want.
             </p>
             <br>
             <br>
-            <h3>Requirements for the lamp:</h3>
+            <h4>Personal requirements for the lamp:</h4>
             <p>
               <li>USB power supply with built in replacable battery</li>
               <li>Direct USB power when charged
@@ -51,6 +69,13 @@
               <li>Swivel and rotating joints for freedom in lamp location and direction</li>
               <li>2 in 1 table clamp and stand combination for more freedom in placement</li>
             </p>
+            <hr>
+            <h3>Part 2- Market Research</h3>
+            <a id="MarketR"></a>
+            <br>
+            <br>
+            <br>
+            <br>
             <br>
         </div>
       </div>
@@ -58,7 +83,7 @@
     </div>
   </body>
 
-  <footer>
+  <footer dir="rtl">
     <div id="footer">
       | Copyright &copy; Ang Yue Yang |
     </div>
