--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div id="container">
       <div id="header">
         <h1>EP1000 Digital Fabrication & Prototyping</h1>
-        <h4>Yang's Records</h4>
+        <h4>P2010773</h4>
       </div>
       <div id="content">
 
         <div id="nav">
             <ul class="nav">
-              <li><a href="index.html" href="">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="project.html">Project</a></li>
               <li><a href="personalpage.html">About Me</a></li>
               <li><a href="expect.html">Why EP1000</a></li>
@@ -27,6 +27,8 @@
 
         <div id="main">
           <h2>Home Page</h2>
+            <br>
+            <h4>The text below is used as filler to test the footer at the bottom of the page</h4>
             <br>
             <h3>The Lorem Ipsum</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -91,7 +93,7 @@
     </div>
   </body>
 
-  <footer>
+  <footer dir="rtl">
     <div id="footer">
       | Copyright &copy; Ang Yue Yang |
     </div>
