--- a/personalpage.html
+++ b/personalpage.html
@@ -4,7 +4,8 @@
     <title>
       YY EP1000
     </title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="icon" href="Images/icon EP1000v4.png">
   </head>
 
   <body>
