--- a/project.html
+++ b/project.html
@@ -4,7 +4,8 @@
     <title>
       YY EP1000
     </title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="icon" href="Images/icon EP1000v4.png">
   </head>
 
   <body>
@@ -28,10 +29,10 @@
 
         <div id="navproject">
             <ul class="navproject">
-              <li><a href="#top">Back to top</a></li>
+              <li><a href="#top">Back To Top</a></li>
               <li><a href="#ideation">Ideation</a></li>
               <li><a href="#MarketR">Market Research</a></li>
-              <li><a href="#ideation">Ideation</a></li>
+              <li><a href="#1Design">Initial Design</a></li>
               <li><a href="#ideation">Ideation</a></li>
             </ul>
         </div>
