--- a/expect.html
+++ b/expect.html
@@ -1,11 +1,11 @@
-html lang="en" dir="ltr">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>
       YY EP1000
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="icon" href="Images/icon EP1000v4.png">
+    <link rel="shortcut icon" type="image/png" href="Images/icon EP1000v4.png">
   </head>
 
   <body>
