--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
       YY EP1000
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="icon" href="Images/icon EP1000v4.png">
+    <link rel="shortcut icon" type="image/png" href="Images/icon EP1000v4.png">
   </head>
 
   <body>
