--- a/project.html
+++ b/project.html
@@ -5,14 +5,13 @@
       YY EP1000
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="shortcut icon" type="image/png" href="Images/iconEP1000v4.png">
+    <link rel="shortcut icon" type="image/png" href="Images/iconEP1000v5.png">
   </head>
 
   <body>
-
+    <a id="top"></a>
     <div id="container">
       <div id="header">
-        <a id="top"></a>
         <h1>EP1000 Digital Fabrication & Prototyping</h1>
         <h4>Project Page</h4>
       </div>
@@ -64,15 +63,20 @@
             <br>
             <h4>Personal requirements for the lamp:</h4>
             <p>
-              <li>USB power supply with built in replacable battery</li>
-              <li>Direct USB power when charged
-              <li>Individual sliders for both night light intensity and Brightness</li>
-              <li>Swivel and rotating joints for freedom in lamp location and direction</li>
-              <li>2 in 1 table clamp and stand combination for more freedom in placement</li>
+              <dl>
+                <dd>USB power supply with built in replacable battery</dd>
+                <dd>Direct USB power when charged</dd>
+                <dd>Night light intensity and Brightness individually adjustable </dd>
+                <dd>Swivel and rotating joints for freedom in lamp location and direction</dd>
+                <dd>Illuminated user interface</dd>
+                <dd>2 in 1 table clamp and stand combination</dd>
+              </dl>
+
             </p>
             <hr>
-            <h3>Part 2- Market Research</h3>
             <a id="MarketR"></a>
+            <h3>Part 2- Market Research</h3>
+            <p></p>
             <br>
             <br>
             <br>
