--- a/project.html
+++ b/project.html
@@ -17,8 +17,8 @@
       </div>
       <div id="content">
 
-        <div id="nav">
-            <ul class="nav">
+        <div id="navmain">
+            <ul class="navmain">
               <li><a href="index.html">Home</a></li>
               <li><a href="project.html">Project</a></li>
               <li><a href="personalpage.html">About Me</a></li>
@@ -26,8 +26,8 @@
             </ul>
         </div>
 
-        <div id="navproject">
-            <ul class="navproject">
+        <div id="navsub">
+            <ul class="navsub">
               <li><a href="#top">Back To Top</a></li>
               <li><a href="#ideation">Ideation</a></li>
               <li><a href="#MarketR">Market Research</a></li>
