--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-
+    <a id="top"></a>
     <div id="container">
       <div id="header">
         <h1>EP1000 Digital Fabrication & Prototyping</h1>
@@ -17,12 +17,18 @@
       </div>
       <div id="content">
 
-        <div id="nav">
-            <ul class="nav">
+        <div id="navmain">
+            <ul class="navmain">
               <li><a href="index.html">Home</a></li>
               <li><a href="project.html">Project</a></li>
               <li><a href="personalpage.html">About Me</a></li>
               <li><a href="expect.html">Why EP1000</a></li>
+            </ul>
+        </div>
+
+        <div id="navsub">
+            <ul class="navsub">
+              <li><a href="#top">Back To Top</a></li>
             </ul>
         </div>
 
