--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div id="navmain">
             <ul class="navmain">
               <li><a href="index.html">Home</a></li>
-              <li><a href="project.html">Project</a></li>
               <li><a href="personalpage.html">About Me</a></li>
               <li><a href="expect.html">Why EP1000</a></li>
-            </ul>
+              <li><a href="learn.html">EP1000 Class</a></li>
+              <li><a href="project.html">Main Project</a></li>
         </div>
 
         <div id="navsub">
