--- a/learn.html
+++ b/learn.html
@@ -29,13 +29,14 @@
 
         <div id="navsub">
             <ul class="navsub">
-              <li><a href="#top">Back To Top</a></li>
-              <li><a href="#ideation">Ideation</a></li>
-              <li><a href="#MarketR">Market Research</a></li>
-              <li><a href="#1Design">Initial Design</a></li>
-              <li><a href="#2Design">Refined Design</a></li>
-              <li><a href="#Production">Production</a></li>
-              <li><a href="#Showcase">Showcase</a></li>
+              <li><a href="#webdev.html">Web Development</a></li>
+              <li><a href="#CadChess.html">CAD</a></li>
+              <li><a href="#3Dprint.html">3D Printing</a></li>
+              <li><a href="#lascut.html">Laser Cutting</a></li>
+              <li><a href="#electronic.html">Electronics</a></li>
+              <li><a href="#arduino.html">Arduino</a></li>
+              <li><a href="#input.html">Input Devices</a></li>
+              <li><a href="#output.html">Output Devices</a></li>
             </ul>
         </div>
 
