--- a/learn.html
+++ b/learn.html
@@ -13,7 +13,7 @@
     <div id="container">
       <div id="header">
         <h1>EP1000 Digital Fabrication & Prototyping</h1>
-        <h4>Project Page</h4>
+        <h4>Skills Learnt In Module</h4>
       </div>
       <div id="content">
 
@@ -29,37 +29,112 @@
 
         <div id="navsub">
             <ul class="navsub">
-              <li><a href="#webdev.html">Web Development</a></li>
-              <li><a href="#CadChess.html">CAD</a></li>
-              <li><a href="#3Dprint.html">3D Printing</a></li>
-              <li><a href="#lascut.html">Laser Cutting</a></li>
-              <li><a href="#electronic.html">Electronics</a></li>
-              <li><a href="#arduino.html">Arduino</a></li>
-              <li><a href="#input.html">Input Devices</a></li>
-              <li><a href="#output.html">Output Devices</a></li>
+              <li><a href="#top">Back To Top</a></li>
+              <li><a href="#webdev">Web Development</a></li>
+              <li><a href="#CadChess">CAD</a></li>
+              <li><a href="#3Dprint">3D Printing</a></li>
+              <li><a href="#lascut">Laser Cutting</a></li>
+              <li><a href="#electronic">Electronics</a></li>
+              <li><a href="#arduino">Arduino</a></li>
+              <li><a href="#input">Input Devices</a></li>
+              <li><a href="#output">Output Devices</a></li>
             </ul>
         </div>
 
 
 
         <div id="main">
-          <h2>Variable Colour Reading Lamp</h2>
+          <h2>Skills Learnt From EP1000 Module</h2>
             <br>
             <hr>
             <br>
-            <a id="ideation"></a>
-            <h3>Part 1- Ideation</h3>
+            <a id="webdev"></a>
+            <h3>Web Development</h3>
             <br>
 
-            <h4>Why reading lamp?</h4>
+            <h4>Materials Used</h4>
             <p>
-              I have wanted a reading lamp that has a variable night light for reading in the dark since quite a while.
-              <br>
-              The reason being that i will revert to a noctournal sleep cycle if left alone nowadays. To compensate for that, might as well make a reading light perfect for long term use
+              <h5>Borrowed Book</h5>
+              I borrowed a book from the Singapore Polytechnic library, <a href="http://www.websitedevelopmentbook.com/hindex.html" target="_blank">
+              Introduciton To Web Development Using HTML5</a>. The link leads to a website that contains the essentials of the book.
+              The condensed content from the website greatly aided in the coding of this website, with the most used sections of the book being the chapters shown below:
+              <ul>
+              <li>Chapter 2: Integrating Images</li>
+              <li>Chapter 3: Using Hyperlinks to Connect Content</li>
+              <li>Chapter 4: Presenting Lists</li>
+              <li>Chapter 5: Formatting Content with Tables</li>
+              <li>Chapter 7: Styling Content Using Cascading Style Sheets</li>
+              <li>Chapter 8: Advanced CSS</li>
+              </ul>
             </p>
             <br>
+            <p>
+              <h5>Icon Production</h5>
+              I used a <a href="https://www.pixilart.com/draw#" target="_blank">pixel art website</a>, pixilart.com to make the browser icon used for this website,
+              which is a stylised yellow letter Y on a grey circle for its background, as shown below:
+              <br>
+              <br>
+              <br>
+              <img src="Images/iconEP1000v5upscaled100x.png">
+              <br>
+              <br>
+                Note that the image shown above is a upscaled version of the icon that is 3200x3200 instead of the actual 32x32 version used as the icon of the website.
+            </p>
             <br>
-            <h4>Why make a lamp instead of buying one?</h4>
+            <p>
+              <h5>Past iterations of the icon</h5>
+              <br>
+              <br>
+              Version 1 of the icon, the V part of the letter Y was found to be too thin to see properly as the browser icon.
+              <br>
+              <img src="Images/iconEP1000.png">
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              Version 2 of the icon, found the stem of the letter Y to be too thick and unbalanced.
+              <br>
+              <img src="Images/iconEP1000v2.png">
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              Version 3 of the icon, found it the black outline of the circle to be unnoticeable and drowned out by dark mode browsers.
+              <br>
+              <img src="Images/iconEP1000v3.png">
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              Version 4 of the icon, found the yellow outline of the circle to be unnoticeable and drowned out by light mode browsers.
+              <br>
+              <img src="Images/iconEP1000v4.png">
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              Version 5 of the icon, final product.
+              <!--Use table to showcase difference in pixel count!-->
+              <br>
+              <br>
+              <br>
+              Upscaled by 100x
+              <img src="Images/iconEP1000v5upscaled100x.png">
+              <br>
+              <br>
+              <br>
+              Actual version used, 32x32 pixels
+              <img src="Images/iconEP1000v5.png">
+              <br>
+            </p>
+
+
+            <br>
+            <h4>CSS</h4>
             <p>
               There is no light available on the market that has this function combination of features that i want.
               The closest examples are lamps that have a night light function but no night light with fine tuning and memory settings,
@@ -67,7 +142,7 @@
             </p>
             <br>
             <br>
-            <h4>Personal requirements for the lamp:</h4>
+            <h4>Javascript</h4>
             <p>
               <dl>
                 <dd>USB power supply with built in replacable battery</dd>
@@ -82,36 +157,39 @@
             <br>
             <hr>
             <br>
-            <a id="MarketR"></a>
-            <h3>Part 2- Market Research</h3>
+            <a id="CadChess"></a>
+            <h3>CAD (Computer Aided Design)</h3>
             <p></p>
             <br>
             <hr>
             <br>
-            <a id="1Design"></a>
-            <h3>Part 3- Initial Design</h3>
+            <a id="3Dprint"></a>
+            <h3>3D Printing (Additive Manufacturing)</h3>
             <br>
             <hr>
             <br>
-            <a id="proto"></a>
-            <h3>Part 4- Prototyping</h3>
+            <a id="lascut"></a>
+            <h3>Laser Cutting</h3>
             <br>
             <hr>
             <br>
-            <a id="2Design"></a>
-            <h3>Part 5- Refined Design</h3>
+            <a id="electronic"></a>
+            <h3>Electronics</h3>
             <br>
             <hr>
             <br>
-            <a id="Production"></a>
-            <h3>Part 6- Production</h3>
+            <a id="arduino"></a>
+            <h3>Arduino</h3>
             <br>
             <hr>
             <br>
-            <a id="Showcase"></a>
-            <h3>Part 7- Showcase</h3>
+            <a id="input"></a>
+            <h3>Input Devices</h3>
             <br>
             <hr>
+            <br>
+            <a id="output"></a>
+            <h3>Output Devices</h3>
             <br>
             <br>
             <br>
