--- a/project.html
+++ b/project.html
@@ -33,7 +33,6 @@
               <li><a href="#ideation">Ideation</a></li>
               <li><a href="#MarketR">Market Research</a></li>
               <li><a href="#1Design">Initial Design</a></li>
-              <li><a href="#prototype">Prototyping</a></li>
               <li><a href="#2Design">Refined Design</a></li>
               <li><a href="#Production">Production</a></li>
               <li><a href="#Showcase">Showcase</a></li>
@@ -93,7 +92,7 @@
             <br>
             <hr>
             <br>
-            <a id="prototype"></a>
+            <a id="proto"></a>
             <h3>Part 4- Prototyping</h3>
             <br>
             <hr>
