--- a/learn.html
+++ b/learn.html
@@ -19,9 +19,10 @@
 
         <div id="navmain">
             <ul class="navmain">
+              <li><a href="#top">Back To Top</a></li>
               <li><a href="index.html">Home</a></li>
               <li><a href="personalpage.html">About Me</a></li>
-              <li><a href="expect.html">Why EP1000</a></li>
+              <li><a href="expect.html">Expectations</a></li>
               <li><a href="learn.html">EP1000 Class</a></li>
               <li><a href="project.html">Main Project</a></li>
             </ul>
@@ -29,8 +30,7 @@
 
         <div id="navsub">
             <ul class="navsub">
-              <li><a href="#top">Back To Top</a></li>
-              <li><a href="#webdev">Web Development</a></li>
+              <li><a href="webdev.html">Web Development</a></li>
               <li><a href="#CadChess">CAD</a></li>
               <li><a href="#3Dprint">3D Printing</a></li>
               <li><a href="#lascut">Laser Cutting</a></li>
@@ -47,9 +47,11 @@
           <h2>Skills Learnt From EP1000 Module</h2>
             <br>
             <hr>
+            <h6><a href="https://rdorville.github.io/EP1000/">Website by lecturer on all things related to EP 1000</a></h6>
+            <hr>
             <br>
             <a id="webdev"></a>
-            <h3>Web Development</h3>
+            <a href="webdev.html"><h3>Web Development</h3></a>
             <br>
 
             <h4>Materials Used</h4>
@@ -58,87 +60,50 @@
               I borrowed a book from the Singapore Polytechnic library, <a href="http://www.websitedevelopmentbook.com/hindex.html" target="_blank">
               Introduciton To Web Development Using HTML5</a>. The link leads to a website that contains the essentials of the book.
               The condensed content from the website greatly aided in the coding of this website, with the most used sections of the book being the chapters shown below:
-              <ul>
-              <li>Chapter 2: Integrating Images</li>
-              <li>Chapter 3: Using Hyperlinks to Connect Content</li>
-              <li>Chapter 4: Presenting Lists</li>
-              <li>Chapter 5: Formatting Content with Tables</li>
-              <li>Chapter 7: Styling Content Using Cascading Style Sheets</li>
-              <li>Chapter 8: Advanced CSS</li>
+              <ul class="list1">
+                <li>Chapter 2: Integrating Images</li>
+                <li>Chapter 3: Using Hyperlinks to Connect Content</li>
+                <li>Chapter 4: Presenting Lists</li>
+                <li>Chapter 5: Formatting Content with Tables</li>
+                <li>Chapter 7: Styling Content Using Cascading Style Sheets</li>
+                <li>Chapter 8: Advanced CSS</li>
               </ul>
-            </p>
-            <br>
-            <p>
-              <h5>Icon Production</h5>
-              I used a <a href="https://www.pixilart.com/draw#" target="_blank">pixel art website</a>, pixilart.com to make the browser icon used for this website,
-              which is a stylised yellow letter Y on a grey circle for its background, as shown below:
-              <br>
-              <br>
-              <br>
-              <img src="Images/iconEP1000v5upscaled100x.png">
-              <br>
-              <br>
-                Note that the image shown above is a upscaled version of the icon that is 3200x3200 instead of the actual 32x32 version used as the icon of the website.
-            </p>
-            <br>
-            <p>
-              <h5>Past iterations of the icon</h5>
-              <br>
-              <br>
-              Version 1 of the icon, the V part of the letter Y was found to be too thin to see properly as the browser icon.
-              <br>
-              <img src="Images/iconEP1000.png">
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              Version 2 of the icon, found the stem of the letter Y to be too thick and unbalanced.
-              <br>
-              <img src="Images/iconEP1000v2.png">
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              Version 3 of the icon, found it the black outline of the circle to be unnoticeable and drowned out by dark mode browsers.
-              <br>
-              <img src="Images/iconEP1000v3.png">
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              Version 4 of the icon, found the yellow outline of the circle to be unnoticeable and drowned out by light mode browsers.
-              <br>
-              <img src="Images/iconEP1000v4.png">
-              <br>
-              <br>
-              <br>
-              <br>
-              <br>
-              Version 5 of the icon, final product.
-              <!--Use table to showcase difference in pixel count!-->
-              <br>
-              <br>
-              <br>
-              Upscaled by 100x
-              <img src="Images/iconEP1000v5upscaled100x.png">
-              <br>
-              <br>
-              <br>
-              Actual version used, 32x32 pixels
-              <img src="Images/iconEP1000v5.png">
-              <br>
-            </p>
 
+              <h4>EP1000 Provided Sources</h4>
+              <br>
+              <h6><a href="https://www.youtube.com/playlist?list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4" target="blank">Playlist by Jake Wright on Web Development.</a></h6>
+              <br>
+              <br>
+              <a href="https://www.youtube.com/watch?v=bWPMSSsVdPk&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=2" target="blank">Learn HTML in 12 Minutes</a>
+              <br>
+              <br>
+              <a href="https://www.youtube.com/watch?v=KJ13lX20FqU&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=3" target="blank">Learn More HTML in 12 Minutes</a>
+              <br>
+              <br>
+              <a href="https://www.youtube.com/watch?v=ZdP0KM49IVk&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=4" target="blank">Learn PHP in 15 minutes</a>
+              <br>
+              <br>
+              <a href="https://www.youtube.com/watch?v=0afZj1G0BIE&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=6" target="blank">Learn CSS in 12 Minutes (Link Provided by lecturers)</a>
+              <br>
+              <br>
+              <a href="https://www.youtube.com/watch?v=Ukg_U3CnJWI&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=6" target="blank">Learn JavaScript in 12 Minutes</a>
+              <br>
+              <br>
+              <a href="https://www.youtube.com/watch?v=YFl2mCHdv24&list=PLlj9BrHKq9WKaz8UV3BjEqicn-C3qHxy4&index=7" target="blank">Learn Docker in 12 Minutes</a>
+              <br>
+              <br>
+              <a href="https://jakewright.net/" target="blank">Jake Wright's website</a>
+
+            </p>
+            <br>
+            <p>
 
             <br>
             <h4>CSS</h4>
             <p>
-              There is no light available on the market that has this function combination of features that i want.
-              The closest examples are lamps that have a night light function but no night light with fine tuning and memory settings,
-              which is exactly what i want.
+              CSS stands for Cascading Style Sheets, it is a method used to describe the presentaion of a document written in languages such as HTML <b>(HyperText Markup Language)</b> or XML <b>(eXtendable Markup Language)</b>
+              enables programmers to change the look, feel and overall presentaion of a website, allowing developers to customise every aspect of their websites to their liking.
+              This is a website i personally used as reference to start the first draft of this site:
             </p>
             <br>
             <br>
