--- a/project.html
+++ b/project.html
@@ -5,6 +5,7 @@
       YY EP1000
     </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="lightmode.css">
     <link rel="shortcut icon" type="image/png" href="Images/iconEP1000v5.png">
   </head>
 
@@ -19,9 +20,10 @@
 
         <div id="navmain">
             <ul class="navmain">
+              <li><a href="#top">Back To Top</a></li>
               <li><a href="index.html">Home</a></li>
               <li><a href="personalpage.html">About Me</a></li>
-              <li><a href="expect.html">Why EP1000</a></li>
+              <li><a href="expect.html">Expectations</a></li>
               <li><a href="learn.html">EP1000 Class</a></li>
               <li><a href="project.html">Main Project</a></li>
             </ul>
@@ -29,7 +31,6 @@
 
         <div id="navsub">
             <ul class="navsub">
-              <li><a href="#top">Back To Top</a></li>
               <li><a href="#ideation">Ideation</a></li>
               <li><a href="#MarketR">Market Research</a></li>
               <li><a href="#1Design">Initial Design</a></li>
@@ -39,7 +40,14 @@
             </ul>
         </div>
 
-
+        <div class="navsub">
+          <li><a href="#ideation"><button class="button">Ideation</button></a></li>
+          <li><button class="button">B2</button></li>
+          <li><button class="button">B3</button></li>
+          <li><button class="button">B4</button></li>
+          </ul>
+          <p style="clear:both">
+        </div>
 
         <div id="main">
           <h2>Variable Colour Reading Lamp</h2>
@@ -115,8 +123,8 @@
             <br>
             <br>
         </div>
-      </div>
 
+      </div>
     </div>
   </body>
 
