--- a/personalpage.html
+++ b/personalpage.html
@@ -19,9 +19,10 @@
 
         <div id="navmain">
             <ul class="navmain">
+              <li><a href="#top">Back To Top</a></li>
               <li><a href="index.html">Home</a></li>
               <li><a href="personalpage.html">About Me</a></li>
-              <li><a href="expect.html">Why EP1000</a></li>
+              <li><a href="expect.html">Expectations</a></li>
               <li><a href="learn.html">EP1000 Class</a></li>
               <li><a href="project.html">Main Project</a></li>
             </ul>
